--- a/templates/result.html
+++ b/templates/result.html
@@ -1,19 +1,117 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html style="font-size: 16px;">
   <head>
-    <title>Unoffcial CPF Calulator Result</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/cpfcal.css') }}">
-    <body>
-      Hello {{ name }}, <br>
-      Based on your monthly salary $ {{ salary }} (capped at $6000) and age {{ age }}: <br>
-      Your monthly CPF contribution by Employer is $ {{ emp }}  <br>
-      Your monthly CPF contribution by Yourself is $ {{ eme }}  <br>
-      Your total monthly CPF contribution is $ {{ tot }}  <br>
-      Here is your CPF contribution monthly breakdown: <br>
-      CPF OA is $ {{ oa }}  <br>
-      CPF SA is $ {{ sa }}  <br>
-      CPF MA is $ {{ ma }}  <br>
-    </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    <title>CPF Monthly Contribution</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nicepage.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/Home.css') }}">
+<!--    <link rel="stylesheet" href="nicepage.css" media="screen"> 
+<link rel="stylesheet" href="Home.css" media="screen"> 
+    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script> -->
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    
+    
+    
+    <script type="application/ld+json">{
+		"@context": "http://schema.org",
+		"@type": "Organization",
+		"name": "",
+		"logo": "static/logo.svg"
+}</script>
+    <meta name="theme-color" content="#478ac9">
+    <meta property="og:title" content="Home">
+    <meta property="og:type" content="website">
   </head>
+  <body data-home-page="index.html" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-e446"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <a href="https://cpfcal.mainframe2cloud.com/" class="u-image u-logo u-image-1">
+          <img src="/static/logo.svg" class="u-logo-image u-logo-image-1">
+        </a>
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+              <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
+              <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+</g></svg>
+            </a>
+          </div>
+          <div class="u-custom-menu u-nav-container">
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a>
+</li></ul>
+          </div>
+          <div class="u-custom-menu u-nav-container-collapse">
+            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+              <div class="u-inner-container-layout u-sidenav-overflow">
+                <div class="u-menu-close"></div>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
+</li></ul>
+              </div>
+            </div>
+            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+          </div>
+        </nav>
+      </div></header>
+    <section class="u-align-center u-clearfix u-section-1" id="sec-2ed6">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h3 class="u-align-left u-custom-font u-font-open-sans u-text u-text-default u-text-1"> Hello {{ name }},&nbsp;<br>
+          <br>Based on your monthly salary $ {{ salary }} (capped at $6000) and age {{ age }}:&nbsp;<br> Your monthly CPF contribution by Employer is $ {{ emp }}&nbsp;<br> Your monthly CPF contribution by Yourself is $ {{ eme }}&nbsp;<br> Your total monthly CPF contribution is $ {{ tot }}&nbsp;<br>
+          <br>Here is your CPF contribution monthly breakdown:&nbsp;
+        </h3>
+      </div>
+    </section>
+    <section class="u-align-center-sm u-align-center-xs u-clearfix u-section-2" id="carousel_4cbb">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-expanded-width u-list u-list-1">
+          <div class="u-repeater u-repeater-1">
+            <div class="u-align-center u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
+                <img src="/static/10131467-0.jpeg" alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="150" data-image-height="100">
+                <a href="https://cpfcal.mainframe2cloud.com/" class="u-btn u-button-style u-palette-3-light-2 u-btn-1">CPF OA</a>
+                <h6 class="u-text u-text-default u-text-1">$ {{ oa }} </h6>
+                <p class="u-text u-text-grey-25 u-text-2"></p>
+              </div>
+            </div>
+            <div class="u-align-center-xl u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-2">
+                <img src="/static/10131467-01.jpeg" alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1600" data-image-height="960">
+                <a href="https://cpfcal.mainframe2cloud.com/" class="u-btn u-button-style u-palette-3-light-2 u-btn-2">CPF&nbsp; MA</a>
+                <h6 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default u-text-3">$ {{ ma }} </h6>
+                <p class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-grey-25 u-text-4"></p>
+              </div>
+            </div>
+            <div class="u-align-center u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-3">
+                <img src="/static/retire.jpg" alt="" class="u-expanded-width u-image u-image-default u-image-3">
+                <a href="https://cpfcal.mainframe2cloud.com/" class="u-btn u-button-style u-palette-3-light-2 u-btn-3">CPF SA</a>
+                <h6 class="u-text u-text-default u-text-5">$ {{ sa }} </h6>
+                <p class="u-text u-text-grey-25 u-text-6"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+<!--
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b3d0"><div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+      </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/website-builder" target="_blank">
+        <span>Website Builder</span>
+      </a>. 
+    </section>
+-->
+  </body>
 </html>
