--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <title>Unoffcial CPF Calulator</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/cpfcal.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
     {% block body %}{% endblock %}
