--- a/templates/result.html
+++ b/templates/result.html
@@ -9,6 +9,7 @@
     <title>CPF Monthly Contribution</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nicepage.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/Home.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <!--    <link rel="stylesheet" href="nicepage.css" media="screen"> 
 <link rel="stylesheet" href="Home.css" media="screen"> 
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
