--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,15 @@
 
 {% block body %}
 
-    <h1>Welcome to the Unoffcial but Famous CPF Calculator</h1>
+    <h1>非官方CPF计算器</h1>
     <form action="/result" method="post">
-    Enter your nickname: <br>
+    请输入昵称: <br>
       <input autocomplete="off" autofocus name="name" placeholder="Bill Lee" type="text" value="Bill Gates">
       <br>
-    Your monthly salary $SGD: <br>
+    请输入月薪 $SGD: <br>
       <input name="salary"  type="number">
       <br>
-    Your age: <br>
+    请输入年龄: <br>
       <input name="age"  type="age">
       <br>
       <input type="submit" value="Submit">
