--- a/templates/result.html
+++ b/templates/result.html
@@ -59,13 +59,13 @@
     <section class="u-align-center u-clearfix u-section-1" id="sec-2ed6">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h3 class="u-align-left u-custom-font u-font-open-sans u-text u-text-default u-text-1"> Hello {{ name }},&nbsp;<br>
-          <br>Based on your monthly salary $ {{ salary }} (capped at $6000) and age {{ age }}:&nbsp;<br> Your monthly CPF contribution by Employer is $ {{ emp }}&nbsp;<br> Your monthly CPF contribution by Yourself is $ {{ eme }}&nbsp;<br> Your total monthly CPF contribution is $ {{ tot }}&nbsp;<br>
-          <br>CPF annual limit is $6000 * 17 * 0.37 = $37740
-          <br>Your annual CPF contribution by Employer is $ {{ yr_emp }}&nbsp;
-          <br>Your annual CPF contribution by Yourself is $ {{ yr_eme }}&nbsp;
-          <br>Your annual total CPF contribution is $ {{ yr_tot }}&nbsp;
+          <br>根据您当前的月薪 $ {{ salary }} ($6000封顶) 和年龄 {{ age }}:&nbsp;<br> 您的每月CPF雇主部分为 $ {{ emp }}&nbsp;<br> 自付部分为 $ {{ eme }}&nbsp;<br> 每月CPF缴纳总额为 $ {{ tot }}&nbsp;<br>
+          <br>CPF年度缴纳总上限为 $6000 * 17 * 0.37 = $37740
+          <br>您的全年CPF雇主部分为 is $ {{ yr_emp }}&nbsp;
+          <br>您的全年CPF自付部分为 $ {{ yr_eme }}&nbsp;
+          <br>您的全年CPF缴纳总额为  $ {{ yr_tot }}&nbsp;
           <br>
-          <br>Here is your CPF contribution monthly breakdown:&nbsp;
+          <br>下面是您每月CPF的分配情况:&nbsp;
         </h3>
       </div>
     </section>
