add bonus display

--- a/templates/result.html
+++ b/templates/result.html
@@ -59,7 +59,7 @@
     <section class="u-align-center u-clearfix u-section-1" id="sec-2ed6">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h3 class="u-align-left u-custom-font u-font-open-sans u-text u-text-default u-text-1"> Hello {{ name }},&nbsp;<br>
-          <br>根据您当前的月薪 $ {{ salary }} ($6000封顶) 和年龄 {{ age }}以及当前身份 {{ status }}，您的每月CPF：<br>雇主部分为 $ {{ emp }}&nbsp;<br> 自付部分为 $ {{ eme }}&nbsp;<br> 每月CPF缴纳总额为 $ {{ tot }}&nbsp;<br>
+          <br>根据您当前的月薪 $ {{ salary }} (超过$6000显示$6000), 全年奖金$ {{ bonus }}  和年龄 {{ age }}以及当前身份 {{ status }}，您的每月CPF：<br>雇主部分为 $ {{ emp }}&nbsp;<br> 自付部分为 $ {{ eme }}&nbsp;<br> 每月CPF缴纳总额为 $ {{ tot }}&nbsp;<br>
           <br>您的全年CPF雇主部分为 is $ {{ yr_emp }}&nbsp;
           <br>您的全年CPF自付部分为 $ {{ yr_eme }}&nbsp;
           <br>您的全年CPF缴纳总额为  $ {{ yr_tot }}&nbsp;<br>
